// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form accepts inputs as children and call registerInput 1`] = `
<form
  className={undefined}
  onSubmit={[Function]}
>
  <input
    className={undefined}
    name="input1"
    onBlur={[Function]}
    onChange={[Function]}
    value="test"
  />
</form>
`;

exports[`Form renders with custom component and calls registerInput 1`] = `
<div>
  <input
    className={undefined}
    name="input2"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Form renders with default component and children 1`] = `
<form
  className={undefined}
  onSubmit={[Function]}
>
  <div>
    some children component
  </div>
</form>
`;
